<resources>
    <string name="app_name">NewsletterApp</string>
    <string name="cat_gory">Catégory</string>
    <string name="science">Science</string>
    <string name="politique">Politique</string>
    <string name="business">Business</string>
    <string name="health">Health</string>
    <string name="angleterre" >ANGLETERRE</string>
    <string name="eu" >ETAT UNIS</string>
    <string name="chine" >CHINE</string>
    <string name="france" >FRANCE</string>
    <string name="choisissez_le_pays" >Choisissez le pays que vous désirez </string>
    <string name="next" >NEXT</string>
    <string name="mr" >MAROC</string>
    <string name="txt" >Bonjour et bienvenue , Les News sont a votre disposition </string>
</resources>